fixed top gap and title

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -13,7 +13,7 @@
   border-radius: 10px;
   padding: 10px;
   box-sizing: border-box;
-  top: 0px;
+  top: 40px;
   bottom: 0px;
   left: 0px;
   right: 0px;
